--- a/Circle/Command/StatusCommand.html
+++ b/Circle/Command/StatusCommand.html
@@ -48,7 +48,7 @@
             <div class="collapse navbar-collapse" id="navbar-elements">
                 <ul class="nav navbar-nav">
                     <li><a href="../../index.html">Home</a></li>
-                    <li><a href="../../https://github.com/code-drop/Circle-CLI">Download</a></li>
+                    <li><a href="https://github.com/code-drop/Circle-CLI">Github / Download</a></li>
                     <li><a href="../../classes.html">Classes</a></li>
                     <li><a href="../../doc-index.html">Index</a></li>
                     <li><a href="../../search.html">Search</a></li>
