--- a/Circle/Circle.html
+++ b/Circle/Circle.html
@@ -106,7 +106,7 @@
                     array
                 </div>
                 <div class="col-md-8 type">
-                    <a href="#method_getRecentBuilds">getRecentBuilds</a>(string $username, string $project_name)
+                    <a href="#method_getRecentBuilds">getRecentBuilds</a>(string $username, string $project_name, string $filter = &#039;&#039;)
                                             <p>Gets the most recent builds for a project.</p>                </div>
                 <div class="col-md-2"></div>
             </div>
@@ -266,7 +266,7 @@
                     <h3 id="method_getRecentBuilds">
         <div class="location">at line 64</div>
         <code>                    array
-    <strong>getRecentBuilds</strong>(string $username, string $project_name)</code>
+    <strong>getRecentBuilds</strong>(string $username, string $project_name, string $filter = &#039;&#039;)</code>
     </h3>
     <div class="details">
                     <div class="method-description">
@@ -284,6 +284,11 @@
                 <td>string</td>
                 <td>$project_name</td>
                 <td>The project name to retrieve the builds for.</td>
+            </tr>
+                    <tr>
+                <td>string</td>
+                <td>$filter</td>
+                <td>One of completed, successful, failed or running. Empty for no filter.</td>
             </tr>
             </table>
 
@@ -305,7 +310,7 @@
             </div>
                     <div class="method-item">
                     <h3 id="method_retryBuild">
-        <div class="location">at line 77</div>
+        <div class="location">at line 83</div>
         <code>                    array
     <strong>retryBuild</strong>(string $username, string $project_name, int $build_num, string $method = &#039;retry&#039;)</code>
     </h3>
@@ -356,7 +361,7 @@
             </div>
                     <div class="method-item">
                     <h3 id="method_cancelBuild">
-        <div class="location">at line 88</div>
+        <div class="location">at line 94</div>
         <code>                    array
     <strong>cancelBuild</strong>(string $username, string $project_name, int $build_num)</code>
     </h3>
@@ -402,7 +407,7 @@
             </div>
                     <div class="method-item">
                     <h3 id="method_getBuild">
-        <div class="location">at line 99</div>
+        <div class="location">at line 105</div>
         <code>                    <a href="../Circle/Build.html"><abbr title="Circle\Build">Build</abbr></a>
     <strong>getBuild</strong>(string $username, string $project_name, int $build_number)</code>
     </h3>
@@ -458,7 +463,7 @@
             </div>
                     <div class="method-item">
                     <h3 id="method_getAllProjects">
-        <div class="location">at line 114</div>
+        <div class="location">at line 120</div>
         <code>                    array
     <strong>getAllProjects</strong>()</code>
     </h3>
@@ -484,7 +489,7 @@
             </div>
                     <div class="method-item">
                     <h3 id="method_addSshKey">
-        <div class="location">at line 127</div>
+        <div class="location">at line 133</div>
         <code>                    
     <strong>addSshKey</strong>(string $username, string $project_name, string $private_key_file, string $hostname = &#039;&#039;)</code>
     </h3>
@@ -526,7 +531,7 @@
             </div>
                     <div class="method-item">
                     <h3 id="method_triggerBuild">
-        <div class="location">at line 143</div>
+        <div class="location">at line 149</div>
         <code>                    array
     <strong>triggerBuild</strong>(string $username, string $project_name, string $branch)</code>
     </h3>
@@ -572,7 +577,7 @@
             </div>
                     <div class="method-item">
                     <h3 id="method_getConfig">
-        <div class="location">at line 197</div>
+        <div class="location">at line 203</div>
         <code>                    <a href="../Circle/Config.html"><abbr title="Circle\Config">Config</abbr></a>
     <strong>getConfig</strong>()</code>
     </h3>
