--- a/doc-index.html
+++ b/doc-index.html
@@ -145,7 +145,9 @@ the build-num paramter. This command uses the
                     <dd>Checks the running status.</dd>        </dl><h2 id="letterM">M</h2>
         <dl id="index"><dt><a href="Circle/Iterator/MapIterator.html"><abbr title="Circle\Iterator\MapIterator">MapIterator</abbr></a> &mdash; <em>Class in namespace <a href="Circle/Iterator.html">Circle\Iterator</a></em></dt>
                     <dd>
-</dd>        </dl><h2 id="letterP">P</h2>
+</dd>        </dl><h2 id="letterO">O</h2>
+        <dl id="index"><dt><a href="Circle/Iterator/MapIterator.html#method_offsetGet"><abbr title="Circle\Iterator\MapIterator">MapIterator</abbr>::offsetGet</a>() &mdash; <em>Method in class <a href="Circle/Iterator/MapIterator.html"><abbr title="Circle\Iterator\MapIterator">MapIterator</abbr></a></em></dt>
+                    <dd>{@inheritdoc}</dd>        </dl><h2 id="letterP">P</h2>
         <dl id="index"><dt><a href="Circle/Command/ProgressCommand.html"><abbr title="Circle\Command\ProgressCommand">ProgressCommand</abbr></a> &mdash; <em>Class in namespace <a href="Circle/Command.html">Circle\Command</a></em></dt>
                     <dd>This command allows you to view the live results of a running build by
 polling the server. The output can be formatted as either a table with all
