Latest docs for notifications.

--- a/Circle.html
+++ b/Circle.html
@@ -72,7 +72,7 @@
 
             <h2>Namespaces</h2>
         <div class="namespace-list">
-            <a href="Circle/Command.html">Circle\Command</a><a href="Circle/Iterator.html">Circle\Iterator</a>        </div>
+            <a href="Circle/Command.html">Circle\Command</a><a href="Circle/Event.html">Circle\Event</a><a href="Circle/Iterator.html">Circle\Iterator</a><a href="Circle/Notification.html">Circle\Notification</a>        </div>
     
             <h2>Classes</h2>
         <div class="container-fluid underlined">
@@ -101,6 +101,14 @@
                 <div class="col-md-6">
                     
 
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <a href="Circle/CommandEvents.html"><abbr title="Circle\CommandEvents">Circle\CommandEvents</abbr></a>
+                                    </div>
+                <div class="col-md-6">
+                    Documents available events.
                 </div>
             </div>
                     <div class="row">
