--- a/interfaces.html
+++ b/interfaces.html
@@ -72,6 +72,15 @@
 
                 </div>
             </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <em><a href="Circle/Command/CommandInterface.html"><abbr title="Circle\Command\CommandInterface">Circle\Command\CommandInterface</abbr></a></em>
+                                    </div>
+                <div class="col-md-6">
+                    
+
+                </div>
+            </div>
             </div>
             </div>
                 <div id="footer">
