--- a/namespaces.html
+++ b/namespaces.html
@@ -68,7 +68,9 @@
                         <ul>
                                                     <li><a href="Circle.html">Circle</a></li>
                                                             <li><a href="Circle/Command.html">Circle\Command</a></li>
+                                                            <li><a href="Circle/Event.html">Circle\Event</a></li>
                                                             <li><a href="Circle/Iterator.html">Circle\Iterator</a></li>
+                                                            <li><a href="Circle/Notification.html">Circle\Notification</a></li>
                             </ul>
             </div>
         </div>
