Provide default configuration.

--- a/Circle/Command/CommandBase.html
+++ b/Circle/Command/CommandBase.html
@@ -99,7 +99,8 @@
                 </div>
                 <div class="col-md-8 type">
                     <a href="#method_notificationsEnabled">notificationsEnabled</a>()
-                                            <p>Gets the notification status.</p>                </div>
+                                            <p class="no-description">No description</p>
+                                    </div>
                 <div class="col-md-2"></div>
             </div>
                     <div class="row">
@@ -168,8 +169,6 @@
     <strong>notificationsEnabled</strong>()</code>
     </h3>
     <div class="details">
-                    <div class="method-description">
-                                    <p>Gets the notification status.</p>                                </div>
                 <div class="tags">
             
                             <h4>Return Value</h4>
