--- a/Circle/Command/ProgressCommand.html
+++ b/Circle/Command/ProgressCommand.html
@@ -127,7 +127,8 @@ circle progress
                 </div>
                 <div class="col-md-8 type">
                     <a href="#method_notificationsEnabled">notificationsEnabled</a>()
-                                            <p>Gets the notification status.</p>                </div>
+                                            <p class="no-description">No description</p>
+                                    </div>
                 <div class="col-md-2"><small>from&nbsp;<a href="../../Circle/Command/CommandBase.html#method_notificationsEnabled"><abbr title="Circle\Command\CommandBase">CommandBase</abbr></a></small></div>
             </div>
                     <div class="row">
@@ -196,8 +197,6 @@ circle progress
     <strong>notificationsEnabled</strong>()</code>
     </h3>
     <div class="details">
-                    <div class="method-description">
-                                    <p>Gets the notification status.</p>                                </div>
                 <div class="tags">
             
                             <h4>Return Value</h4>
