--- a/doc-index.html
+++ b/doc-index.html
@@ -159,7 +159,8 @@ for giving the user feedback (notifications) when the command completes.</dd><dt
                     <dd>
 </dd>        </dl><h2 id="letterN">N</h2>
         <dl id="index"><dt><a href="Circle/Command/CommandBase.html#method_notificationsEnabled"><abbr title="Circle\Command\CommandBase">CommandBase</abbr>::notificationsEnabled</a>() &mdash; <em>Method in class <a href="Circle/Command/CommandBase.html"><abbr title="Circle\Command\CommandBase">CommandBase</abbr></a></em></dt>
-                    <dd>Gets the notification status.</dd><dt><a href="Circle/Command/CommandInterface.html#method_notificationsEnabled"><abbr title="Circle\Command\CommandInterface">CommandInterface</abbr>::notificationsEnabled</a>() &mdash; <em>Method in class <a href="Circle/Command/CommandInterface.html"><abbr title="Circle\Command\CommandInterface">CommandInterface</abbr></a></em></dt>
+                    <dd>
+</dd><dt><a href="Circle/Command/CommandInterface.html#method_notificationsEnabled"><abbr title="Circle\Command\CommandInterface">CommandInterface</abbr>::notificationsEnabled</a>() &mdash; <em>Method in class <a href="Circle/Command/CommandInterface.html"><abbr title="Circle\Command\CommandInterface">CommandInterface</abbr></a></em></dt>
                     <dd>
 </dd><dt><a href="Circle/Notification/NotificationBase.html"><abbr title="Circle\Notification\NotificationBase">NotificationBase</abbr></a> &mdash; <em>Class in namespace <a href="Circle/Notification.html">Circle\Notification</a></em></dt>
                     <dd>
@@ -194,12 +195,9 @@ to rebuild with SSH enabled.</dd>        </dl><h2 id="letterS">S</h2>
 to provide a quick status overview of the project. The table fields and the
 number of results to display is all configurable.</dd><dt><a href="Circle/Config.html#method_setAll"><abbr title="Circle\Config">Config</abbr>::setAll</a>() &mdash; <em>Method in class <a href="Circle/Config.html"><abbr title="Circle\Config">Config</abbr></a></em></dt>
                     <dd>Overwrite the entire loaded config.</dd><dt><a href="Circle/Config.html#method_setGlobalFile"><abbr title="Circle\Config">Config</abbr>::setGlobalFile</a>() &mdash; <em>Method in class <a href="Circle/Config.html"><abbr title="Circle\Config">Config</abbr></a></em></dt>
-                    <dd>
-</dd><dt><a href="Circle/Config.html#method_setLocalFile"><abbr title="Circle\Config">Config</abbr>::setLocalFile</a>() &mdash; <em>Method in class <a href="Circle/Config.html"><abbr title="Circle\Config">Config</abbr></a></em></dt>
-                    <dd>
-</dd><dt><a href="Circle/Config.html#method_setPrivateFile"><abbr title="Circle\Config">Config</abbr>::setPrivateFile</a>() &mdash; <em>Method in class <a href="Circle/Config.html"><abbr title="Circle\Config">Config</abbr></a></em></dt>
-                    <dd>
-</dd><dt><a href="Circle/Step.html"><abbr title="Circle\Step">Step</abbr></a> &mdash; <em>Class in namespace <a href="Circle.html">Circle</a></em></dt>
+                    <dd>Sets the global file path.</dd><dt><a href="Circle/Config.html#method_setLocalFile"><abbr title="Circle\Config">Config</abbr>::setLocalFile</a>() &mdash; <em>Method in class <a href="Circle/Config.html"><abbr title="Circle\Config">Config</abbr></a></em></dt>
+                    <dd>Sets the local file path.</dd><dt><a href="Circle/Config.html#method_setPrivateFile"><abbr title="Circle\Config">Config</abbr>::setPrivateFile</a>() &mdash; <em>Method in class <a href="Circle/Config.html"><abbr title="Circle\Config">Config</abbr></a></em></dt>
+                    <dd>Sets the private file path.</dd><dt><a href="Circle/Step.html"><abbr title="Circle\Step">Step</abbr></a> &mdash; <em>Class in namespace <a href="Circle.html">Circle</a></em></dt>
                     <dd>
 </dd>        </dl><h2 id="letterT">T</h2>
         <dl id="index"><dt><a href="Circle/Build.html#method_toArray"><abbr title="Circle\Build">Build</abbr>::toArray</a>() &mdash; <em>Method in class <a href="Circle/Build.html"><abbr title="Circle\Build">Build</abbr></a></em></dt>
