--- a/Circle/Command/CancelCommand.html
+++ b/Circle/Command/CancelCommand.html
@@ -107,7 +107,8 @@ the build-num paramter. This command uses the
                 </div>
                 <div class="col-md-8 type">
                     <a href="#method_notificationsEnabled">notificationsEnabled</a>()
-                                            <p>Gets the notification status.</p>                </div>
+                                            <p class="no-description">No description</p>
+                                    </div>
                 <div class="col-md-2"><small>from&nbsp;<a href="../../Circle/Command/CommandBase.html#method_notificationsEnabled"><abbr title="Circle\Command\CommandBase">CommandBase</abbr></a></small></div>
             </div>
                     <div class="row">
@@ -176,8 +177,6 @@ the build-num paramter. This command uses the
     <strong>notificationsEnabled</strong>()</code>
     </h3>
     <div class="details">
-                    <div class="method-description">
-                                    <p>Gets the notification status.</p>                                </div>
                 <div class="tags">
             
                             <h4>Return Value</h4>
