--- a/Circle/Command/SshKeyCommand.html
+++ b/Circle/Command/SshKeyCommand.html
@@ -106,7 +106,8 @@
                 </div>
                 <div class="col-md-8 type">
                     <a href="#method_notificationsEnabled">notificationsEnabled</a>()
-                                            <p>Gets the notification status.</p>                </div>
+                                            <p class="no-description">No description</p>
+                                    </div>
                 <div class="col-md-2"><small>from&nbsp;<a href="../../Circle/Command/CommandBase.html#method_notificationsEnabled"><abbr title="Circle\Command\CommandBase">CommandBase</abbr></a></small></div>
             </div>
                     <div class="row">
@@ -175,8 +176,6 @@
     <strong>notificationsEnabled</strong>()</code>
     </h3>
     <div class="details">
-                    <div class="method-description">
-                                    <p>Gets the notification status.</p>                                </div>
                 <div class="tags">
             
                             <h4>Return Value</h4>
