--- a/index.html
+++ b/index.html
@@ -76,15 +76,14 @@
     <h2>Install with composer</h2>
     <pre>
 composer require "code-drop/circle-cli ~1.0"
-
-# Copy the sample config file into your home directory (or your project)
-cp vendor/code-drop/circle-cli/circle-cli.yml.sample ~/circle-cli.yml
-    </pre>
-
     <pre>
 # Copy the sample private file, then add your token to this file.
 cp vendor/code-drop/circle-cli/circle-cli.private.yml.sample circle-cli.private.yml
     </pre>
+
+    <h2>Grab The Phar</h2>
+
+    <pre>wget https://code-drop.github.io/Circle-CLI/circle-cli.phar</pre>
 
     <h2>Configuration</h2>
 
